fixed overflow scroll bug

--- a/src/style/blocks/_navBar.scss
+++ b/src/style/blocks/_navBar.scss
@@ -26,7 +26,7 @@
     }
 
     .navigation{
-        overflow-y: scroll;
+        overflow-y: auto;
         
         ul{
             li{
